--- a/dev_data/lang/lang.lv.json
+++ b/dev_data/lang/lang.lv.json
@@ -62,5 +62,6 @@
  "LangColor1":"Sarkans",
  "LangColor2":"Zaļš",
  "LangColor3":"Zils",
+ "LangSpeed":"Atrums",
  "LangIfttt3":"Citas iespējas var atrast <a target=\"_blank\" href=\"https://ifttt.com/create/if-date_and_time?sid=1\">ifttt.com</a>."
 }
