--- a/dev_data/lang/lang.en.json
+++ b/dev_data/lang/lang.en.json
@@ -62,5 +62,6 @@
  "LangColor1":"Red",
  "LangColor2":"Green",
  "LangColor3":"Blue",
+ "LangSpeed":"Speed",
  "LangIfttt3":"More options can be found at <a target=\"_blank\" href=\"https://ifttt.com/create/if-date_and_time?sid=1\">ifttt.com</a>."
 }
