--- a/dev_data/lang/lang.ru.json
+++ b/dev_data/lang/lang.ru.json
@@ -62,5 +62,6 @@
  "LangColor1":"Красный",
  "LangColor2":"Зеленый",
  "LangColor3":"Синий",
+ "LangSpeed":"Скорость",
  "LangIfttt3":"Больше настроек вы можете получить на <a target=\"_blank\" href=\"https://ifttt.com/create/if-date_and_time?sid=1\">ifttt.com</a>."
 }
