PIR сенсором можно управлять с веб +- другие мелочи

--- a/dev_data/lang/lang.ru.json
+++ b/dev_data/lang/lang.ru.json
@@ -26,6 +26,7 @@
  "LangAddScenery":"Добавить сценарий",
  "LangIf":"Если",
  "LangThen":"Значит",
+ "LangHedden":"Скрыть блок?\nЕго можно будет восстановить на странице 'Доп. настройки'.",
 
  "_comment": "---SETUP.HTM---",
  "LangDevice":"Имя устройства",
@@ -58,7 +59,7 @@
  "LangOff":"Выключить",
  "LangTime3":"Будильники",
  "LangTime4":"Будильник",
- "LangTime5":"Время работы сигнала:",
+ "LangTime5":"Время работы сигнала",
  "LangTime7":"Здесь указывается время в секундах как долго будет звенеть будильник и гореть LED.",
  "LangTime8":"На сколько минут включить?",
  "LangTime9":"минут",
