--- a/dev_data/lang/lang.en.json
+++ b/dev_data/lang/lang.en.json
@@ -68,5 +68,7 @@
  "LangColor2":"Green",
  "LangColor3":"Blue",
  "LangSpeed":"Speed",
+ "LangPir1":"PIR Sensor",
+ "LangPir2":"Time in seconds how long the LED will light on the sensor to movement. If the sensor is not connected PIR, the value should be 0.",
  "LangIfttt3":"More options can be found at <a target=\"_blank\" href=\"https://ifttt.com/create/if-date_and_time?sid=1\">ifttt.com</a>."
 }
