Большое обновление, добавлены таймеры. Заработают в ближайшие дни.

--- a/dev_data/lang/lang.ru.json
+++ b/dev_data/lang/lang.ru.json
@@ -2,7 +2,7 @@
  "_comment": "---INDEX.HTM---",
  "LangDevices":"Страница устройств",
  "LangOptions1":"Страница управления",
- "LangSetting3":"Доп. настройки",
+ "LangSetting3":"Конфигурация",
  "LangExample":"Пример",
  "LangSec":"Сек.",
  "LangOff.":"Выкл.",
@@ -15,18 +15,17 @@
  "LangSearch2":"Если у вас несколько устройств подключено к сети, вы можете добавить его сюда нажав кнопку ниже:",
  "LangSearch3":"Найти устройства",
  "LangSearch4":"Пожалуйста подождите, идет сканирование сети.",
- "LangOptions2":"Изменить конфигурацию устройства вы можете на \"Страница управления\".",
+ "LangOptions2":"Изменить конфигурацию устройства вы можете на \"Cтраница управления\"",
  "LangLanguage":"Русский",
  "LangConnect1":"Подождите, устройство подключается к вашей сети.",
  "LangConnect2":"IP адрес устройства в вашей сети:",
- "LangRedirect":"Авто перенаправление через",
  "LangCookie":"Восстановить закрытые блоки",
  "LangScenery1":"Сценарии",
  "LangScenery2":"Ниже вы можете автоматизировать некоторые задачи",
  "LangAddScenery":"Добавить сценарий",
  "LangIf":"Если",
  "LangThen":"Значит",
- "LangHedden":"Скрыть блок?\nЕго можно будет восстановить на странице \"Доп. настройки\".",
+ "LangHedden":"Скрыть блок?\nЕго можно будет восстановить на странице \"Конфигурация\".",
  "LangChart":"График",
 
  "_comment": "---SETUP.HTM---",
@@ -42,29 +41,44 @@
  "LangGMT2":"Автоопределение и сохранение зоны",
  "LangAP":"Точка доступа",
  "LangDdns1":"Динамический DNS",
- "LangDdns2":"В 15, 30, 45 минут каждого часа устройство переходить по ссылке. Вы можете воспользоваться <a target=\"_blank\" href=\"http://dyndns.dk\">dyndns.dk</a> и таким образом сделать себе домен на динамическом IP. Что позволит комфортно пользоваться <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>",
+ "LangDdns2":"В 15, 30, 45, 00 минут каждого часа устройство переходить по ссылке. Вы можете воспользоваться <a target=\"_blank\" href=\"http://dyndns.dk\">dyndns.dk</a> и таким образом сделать себе домен на динамическом IP. Что позволит комфортно пользоваться <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>",
  "LangTime1":"На устройстве сейчас",
  "LangTime2":"Синхронизировать время",
  "LangReset1":"Перезагрузить устройство",
  "LangReset2":"Изменения вступят в силу после перезагрузки. Пожалуйста перезагрузите устройство.",
  "LangReset3":"Вы действительно хотите перезагрузить устройство?",
+ "LangRedirect":"Авто перенаправление через",
  "LangHiddenWifi":"Подключится к скрытой WiFi сети",
 
+ "_comment": "---TIMER.HTM---",
+ "LangTime3":"Установить время включения",
+ "LangTime4":"Время",
+ "LangList":"Список",
+ "LangDay":"День",
+ "LangTimer":"Таймеры",
+ "LangWorkTime":"Продолж. работы",
+ "LangMin.":"Мин.",
+ "LangDel":"Удалить",
+ "LangMon":"Понедельник",
+ "LangTue":"Вторник",
+ "LangWed":"Среда",
+ "LangThu":"Четверг",
+ "LangFri":"Пятница",
+ "LangSat":"Суббота",
+ "LangSun":"Воскресенье",
+ "LangAll":"Всегда",
+ "LangTime6":"Настраивая время перед одиночными цифрами пишите 0.",
+
  "_comment": "---DEVICE.HTM---",
- "LangTime6":"Обратите внимание. Настраивая время перед одиночными цифрами пишите 0. Пример: 03:09:10. Будильник будит повторять звонить каждый день.",
  "LangIfttt1":"С помощью сервиса <a target=\"_blank\" href=\"https://ifttt.com/myrecipes/personal\">ifttt.com</a> Устройство может включатся по многим сценариев, например: новое сообщение в facebook, twitter, <a onclick=\"toggle('hide');return false\" href=\"#\">подробнее...</a>",
  "LangIfttt2":"задания в Google calendar, почта и многое другое. Подробней о том как это сделать вы можете посмотреть видео <a target=\"_blank\" href=\"https://youtu.be/3PVQYLQ-XDQ\">здесь</a>.<br>Локальная ссылка: <span id=\"url1\">Выберите цвет</span><br>Глобальная ссылка: <span id=\"url2\">Выберите цвет</span>",
 
  "LangOnOff":"Включить/Выключить",
  "LangOn":"Включить",
  "LangOff":"Выключить",
- "LangTime3":"Будильники",
- "LangTime4":"Будильник",
  "LangTime5":"Время работы сигнала",
- "LangTime7":"Здесь указывается время в секундах как долго будет звенеть будильник и гореть LED.",
  "LangTime8":"На сколько минут включить?",
  "LangTime9":"минут",
- "LangTime10":"Время",
  "LangColor1":"Красный",
  "LangColor2":"Зеленый",
  "LangColor3":"Синий",
