--- a/dev_data/lang/lang.en.json
+++ b/dev_data/lang/lang.en.json
@@ -19,7 +19,6 @@
  "LangLanguage":"English",
  "LangConnect1":"Please wait, device connected to your network",
  "LangConnect2":"IP address of the device on your network:",
- "LangRedirect":"Auto redirection through",
  "LangCookie":"Restore closed blocks",
  "LangScenery1":"Scenery",
  "LangScenery2":"Here you can automatize your life. :)",
@@ -42,29 +41,44 @@
  "LangGMT2":"Auto search and save GMT zone",
  "LangAP":"Access point",
  "LangDdns1":"Dynamic DNS",
- "LangDdns2":"At 15th, 30th, 45th minutes every hour the device switched to the link. You can use <a target=\"_blank\" href=\"http://dyndns.dk\"> dyndns.dk </a> and this make a domain on a dynamic IP. That will allow comfortable use <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>",
+ "LangDdns2":"At 15, 30, 45, 00 minutes every hour the device switched to the link. You can use <a target=\"_blank\" href=\"http://dyndns.dk\"> dyndns.dk </a> and this make a domain on a dynamic IP. That will allow comfortable use <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>",
  "LangTime1":"Device time",
  "LangTime2":"Synchronize time",
  "LangReset1":"Reload this device",
  "LangReset2":"Changes will take effect after a reboot. Please reboot your device.",
  "LangReset3":"Are you sure you want to reboot the device?",
+ "LangRedirect":"Auto redirection through",
  "LangHiddenWifi":"Connect to hidden WiFi network",
 
+ "_comment": "---TIMER.HTM---",
+ "LangTime3":"Set time work",
+ "LangTime4":"Time",
+ "LangList":"List",
+ "LangDay":"Day",
+ "LangTimer":"Timers",
+ "LangWorkTime":"Work time",
+ "LangMin.":"Min.",
+ "LangDel":"Delete",
+ "LangMon":"Monday",
+ "LangTue":"Tuesday",
+ "LangWed":"Wednesday",
+ "LangThu":"Thursday",
+ "LangFri":"Friday",
+ "LangSat":"Saturday",
+ "LangSun":"Sunday",
+ "LangAll":"Always",
+ "LangTime6":"Attention. By adjusting the time write \"0\" before a single digit.",
+
  "_comment": "---DEVICE.HTM---",
- "LangTime6":"Attention. By adjusting the time write \"0\" before a single digit. Example: 03:09:10. Alarm Clock repeated calls every day.",
  "LangIfttt1":"With service <a target=\"_blank\" href=\"https://ifttt.com/myrecipes/personal\"> ifttt.com </a> device can be switched in many scenarios, such as: new message on facebook, twitter, <a onclick=\"toggle('hide');return false\" href=\"#\">more...</a>",
  "LangIfttt2":"setting in Google calendar, mail, etc. More information how to do this, you can see in the video <a target=\"_blank\" href=\"https://youtu.be/3PVQYLQ-XDQ\">here</a>.<br>Local link: <span id=\"url1\">Select the color</span><br>Global link: <span id=\"url2\">Select the color</span>",
 
  "LangOnOff":"On / Off",
  "LangOn":"On",
  "LangOff":"Off",
- "LangTime3":"Alarms",
- "LangTime4":"Alarm clock",
  "LangTime5":"Alarm time work",
- "LangTime7":"This specifies the time in seconds how long will ring alarm clock and lit LED.",
  "LangTime8":"How many minutes of play?",
  "LangTime9":"minutes",
- "LangTime10":"Time",
  "LangColor1":"Red",
  "LangColor2":"Green",
  "LangColor3":"Blue",
