--- a/dev_data/lang/lang.lv.json
+++ b/dev_data/lang/lang.lv.json
@@ -19,7 +19,6 @@
  "LangLanguage":"Latviski",
  "LangConnect1":"Pagaidiet, ierīce savienojas ar tīklu.",
  "LangConnect2":"IP adresi ierīces jūsu tīklā būs:",
- "LangRedirect":"Auto novirzīšana caur",
  "LangCookie":"Atjaunot slēgtas bloki",
  "LangScenery1":"Scenāriji",
  "LangScenery2":"Zemāk jūs varat automatizēt dažus uzdevumus",
@@ -32,7 +31,7 @@
  "_comment": "---SETUP.HTM---",
  "LangDevice":"Ierīces nosaukums",
  "LangSetting4":"<b><a onclick=\"toggle('hide');return false\" href=\"#\">Atvērt Izstrādātāja iestatījumus</a></b><br>Uzmanīgi, nepārdomāta rīcība var bojāt ierīci.",
- "LangSetting5":"Noklikšķinot <a target=\"_blank\" href=\"/edit\">šeit</a> jūs varat mainīt HTML, CSS, JS failus projektā.<br>Zemāk jūs varat lejupielādēt jaunāko versiju no šejeni",
+ "LangSetting5":"Noklikšķinot <a target=\"_blank\" href=\"/edit\">šeit</a> jūs varat mainīt HTML, CSS, JS failus projektā.<br>Zemāk jūs varat lejupielādēt jaunāko versiju no šejeni:",
  "LangPass":"Parole",
  "LangWiFi1":"WiFi punkta nosaukums",
  "LangWiFi2":"Pieslēgšanās pie Wi-Fi routera",
@@ -42,29 +41,44 @@
  "LangGMT2":"Automātiska laika joslas izvēle un saglabāšana",
  "LangAP":"Piekļuves punkts",
  "LangDdns1":"Dinamisks DNS",
- "LangDdns2":"Katras stundas 15., 30., 45. minūtē iekārta iet uz linku. Jūs varat izmantot <a target=\"_blank\" href=\"http://dyndns.dk\">dyndns.dk</a> un tādējādi izveidot sev domēnu ar dinamisko IP adresi. Tas ļaus ērti izmantot <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>",
+ "LangDdns2":"Katras stundas 15., 30., 45., 00 minūtē iekārta iet uz linku. Jūs varat izmantot <a target=\"_blank\" href=\"http://dyndns.dk\">dyndns.dk</a> un tādējādi izveidot sev domēnu ar dinamisko IP adresi. Tas ļaus ērti izmantot <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>",
  "LangTime1":"Plkst. uz ierīces tagad",
  "LangTime2":"Sinhronizēt laiku",
  "LangReset1":"Pārlādēt šo ierīci",
  "LangReset2":"Izmaiņas stāsies spēkā pēc restarta. Lūdzu, restartējiet ierīci.",
  "LangReset3":"Vai jūs tiešām vēlaties restartēt ierīci?",
+ "LangRedirect":"Auto novirzīšana caur",
  "LangHiddenWifi":"Savienojumu ar slēpto WiFi tīklam",
 
+ "_comment": "---TIMER.HTM---",
+ "LangTime3":"Uzstadinal darba laiks",
+ "LangTime4":"Laiks",
+ "LangList":"Saraksts",
+ "LangDay":"Diena",
+ "LangTimer":"Taimeri",
+ "LangWorkTime":"Darba laiks",
+ "LangMin.":"Min.",
+ "LangDel":"Dzest",
+ "LangMon":"Pirmdiena",
+ "LangTue":"Otrdiena",
+ "LangWed":"Trešdiena",
+ "LangThu":"Ceturdiena",
+ "LangFri":"Piektdiena",
+ "LangSat":"Sestdiena",
+ "LangSun":"Svetdiena",
+ "LangAll":"Visas",
+ "LangTime6":"Svarigi. Norādot laiku, rakstīt \"0\" pirms vienciparu skaitļa.",
+
  "_comment": "---DEVICE.HTM---",
- "LangTime6":"Svarigi. Norādot laiku, rakstīt \"0\" pirms vienciparu skaitļa. Piemērs: 03:09:10. Modinātājs zvana katru dienu.",
  "LangIfttt1":"Ar pakalpojumu <a target=\"_blank\" href=\"https://ifttt.com/myrecipes/personal\">ifttt.com</a> ierīcei var pieslēgt vairākus scenārijus, piemēram: jauna vēstule facebook, twitter, <a onclick=\"toggle('hide');return false\" href=\"#\">vairāk...</a>",
  "LangIfttt2":"pasākums Google kalendārā, e-pasts un daudz ko citu. Vairāk informācijas par to, kā to izdarīt, jūs varat redzēt video <a target=\"_blank\" href=\"https://youtu.be/3PVQYLQ-XDQ\">šeit</a>.<br>Local saite: <span id=\"url1\">Izvēlieties krāsu</span><br>Global saite: <span id=\"url2\">Izvēlieties krāsu</span>",
 
  "LangOnOff":"Ieslēgt / Izslēgt",
  "LangOn":"Ieslēgt",
  "LangOff":"Izslēgt",
- "LangTime3":"Modinātāji",
- "LangTime4":"Modinātājs",
  "LangTime5":"Signāla darba laiks",
- "LangTime7":"Laiks sekundēs, cik ilgi būs darbosies modinātāja signāls un degs LED gaisma.",
  "LangTime8":"Uz cik minūtes ieslegt?",
  "LangTime9":"minūtes",
- "LangTime10":"Laiks",
  "LangColor1":"Sarkans",
  "LangColor2":"Zaļš",
  "LangColor3":"Zils",
