--- a/dev_data/lang/lang.ru.json
+++ b/dev_data/lang/lang.ru.json
@@ -11,6 +11,7 @@
  "LangCancel":"Отмена",
  "LangHistory":"История",
  "LangLoading":"Загрузка...",
+ "LangSorting":"Сортировка",
  "LangSearch1":"Поиск",
  "LangSearch2":"Если у вас несколько устройств подключено к сети, вы можете добавить его сюда нажав кнопку ниже:",
  "LangSearch3":"Найти устройства",
@@ -67,7 +68,9 @@
  "LangSat":"Суббота",
  "LangSun":"Воскресенье",
  "LangAll":"Всегда",
- "LangTime6":"Настраивая время перед одиночными цифрами пишите 0.",
+ "LangSwitch.":"Перекл.",
+ "LangTimerMore":"Показать таймеры всех устройств",
+ "LangTime6":"Настраивая время перед одиночными цифрами пишите 0. Ячейку Мин(Продолж. работы) заполнять не обязательно.",
 
  "_comment": "---DEVICE.HTM---",
  "LangIfttt1":"С помощью сервиса <a target=\"_blank\" href=\"https://ifttt.com/myrecipes/personal\">ifttt.com</a> Устройство может включатся по многим сценариев, например: новое сообщение в facebook, twitter, <a onclick=\"toggle('hide');return false\" href=\"#\">подробнее...</a>",
@@ -83,7 +86,7 @@
  "LangColor2":"Зеленый",
  "LangColor3":"Синий",
  "LangSpeed":"Скорость",
- "LangPir1":"PIR Сенсор",
+ "LangPir1":"Датчик движения",
  "LangPir2":"Время в секундах как долго будет гореть LED от сенсора на движения. Если PIR сенсор не подключен, значение должно быть 0.",
  "LangIfttt3":"Больше настроек вы можете получить на <a target=\"_blank\" href=\"https://ifttt.com/create/if-date_and_time?sid=1\">ifttt.com</a>."
 }
