--- a/dev_data/lang/lang.lv.json
+++ b/dev_data/lang/lang.lv.json
@@ -86,6 +86,7 @@
  "LangColor2":"Zaļš",
  "LangColor3":"Zils",
  "LangSpeed":"Atrums",
+ "LengBrightness":"Spilgtums",
  "LangPir1":"PIR Sensor",
  "LangPir2":"Ja sensors nav pieslēgts PIR, vērtība 0.",
  "LangIfttt3":"Citas iespējas var atrast <a target=\"_blank\" href=\"https://ifttt.com/create/if-date_and_time?sid=1\">ifttt.com</a>."
