--- a/dev_data/lang/lang.lv.json
+++ b/dev_data/lang/lang.lv.json
@@ -77,6 +77,7 @@
  "LangIfttt1":"Ar pakalpojumu <a target=\"_blank\" href=\"https://ifttt.com/myrecipes/personal\">ifttt.com</a> ierīcei var pieslēgt vairākus scenārijus, piemēram: jauna vēstule facebook, twitter, <a onclick=\"toggle('hide');return false\" href=\"#\">vairāk...</a>",
  "LangIfttt2":"pasākums Google kalendārā, e-pasts un daudz ko citu. Vairāk informācijas par to, kā to izdarīt, jūs varat redzēt video <a target=\"_blank\" href=\"https://youtu.be/3PVQYLQ-XDQ\">šeit</a>.<br>Local saite: <span id=\"url1\">Izvēlieties krāsu</span><br>Global saite: <span id=\"url2\">Izvēlieties krāsu</span>",
 
+ "LangClose":"Aizvert",
  "LangOnOff":"Ieslēgt / Izslēgt",
  "LangOn":"Ieslēgt",
  "LangOff":"Izslēgt",
