--- a/dev_data/lang/lang.ru.json
+++ b/dev_data/lang/lang.ru.json
@@ -77,6 +77,7 @@
  "LangIfttt1":"С помощью сервиса <a target=\"_blank\" href=\"https://ifttt.com/myrecipes/personal\">ifttt.com</a> Устройство может включатся по многим сценариев, например: новое сообщение в facebook, twitter, <a onclick=\"toggle('hide');return false\" href=\"#\">подробнее...</a>",
  "LangIfttt2":"задания в Google calendar, почта и многое другое. Подробней о том как это сделать вы можете посмотреть видео <a target=\"_blank\" href=\"https://youtu.be/3PVQYLQ-XDQ\">здесь</a>.<br>Локальная ссылка: <span id=\"url1\">Выберите цвет</span><br>Глобальная ссылка: <span id=\"url2\">Выберите цвет</span>",
 
+ "LangClose":"Закрыть",
  "LangOnOff":"Включить/Выключить",
  "LangOn":"Включить",
  "LangOff":"Выключить",
