--- a/dev_data/lang/lang.en.json
+++ b/dev_data/lang/lang.en.json
@@ -76,6 +76,7 @@
  "LangIfttt1":"With service <a target=\"_blank\" href=\"https://ifttt.com/myrecipes/personal\"> ifttt.com </a> device can be switched in many scenarios, such as: new message on facebook, twitter, <a onclick=\"toggle('hide');return false\" href=\"#\">more...</a>",
  "LangIfttt2":"setting in Google calendar, mail, etc. More information how to do this, you can see in the video <a target=\"_blank\" href=\"https://youtu.be/3PVQYLQ-XDQ\">here</a>.<br>Local link: <span id=\"url1\">Select the color</span><br>Global link: <span id=\"url2\">Select the color</span>",
 
+ "LangClose":"Close",
  "LangOnOff":"On / Off",
  "LangOn":"On",
  "LangOff":"Off",
