Появился новый дизайн, теперь их всего 3. Json файлы страниц pages.htm?* теперь можно скачивать нажимая на облако возле кнопки Save. В response теперь можно указывать несколько имен через запятую. Исправлены таймеры в втором дизайне. +- другие мелочи

--- a/dev_data/lang/lang.en.json
+++ b/dev_data/lang/lang.en.json
@@ -30,8 +30,7 @@
  "LangChart":"Chart",
  "LangRefresh":"Refresh",
  "LangHelp":"Help",
- "LangNewDesign":"New design",
- "LangOldDesign":"Old design",
+ "LangDesign":"Design",
  "LangNoTimers":"No timers",
  "LangQuestion":"Are you sure?",
  "LangUpgrade":"Install new version?",
