--- a/dev_data/lang/lang.lv.json
+++ b/dev_data/lang/lang.lv.json
@@ -31,8 +31,7 @@
  "LangRefresh":"Atjaunat",
  "LangHelp":"Palīdziba",
  "LangNewDesign":"jauns dizains",
- "LangOldDesign":"Vec dizains",
- "LangNoTimers":"Nav taimerus",
+ "LangDesign":"Dizains",
  "LangQuestion":"Vai tu esi pārliecināts?",
  "LangUpgrade":"Installet jaunu versiju?",
  "LangDonate":"Atbalstīt projektu",
