--- a/dev_data/lang/lang.ru.json
+++ b/dev_data/lang/lang.ru.json
@@ -30,8 +30,7 @@
  "LangChart":"График",
  "LangRefresh":"Обновить",
  "LangHelp":"Помощь",
- "LangNewDesign":"Новый дизайн",
- "LangOldDesign":"Старый дизайн",
+ "LangDesign":"Дизайн",
  "LangNoTimers":"Нет таймеров",
  "LangQuestion":"Вы уверены?",
  "LangUpgrade":"Установить новое обновление?",
