--- a/dev_data/lang/lang.ua.json
+++ b/dev_data/lang/lang.ua.json
@@ -30,8 +30,7 @@
  "LangChart":"Графік",
  "LangRefresh":"Обновити",
  "LangHelp":"Допомога",
- "LangNewDesign":"Новий дизайн",
- "LangOldDesign":"Старий дизайн",
+ "LangDesign":"Дизайн",
  "LangNoTimers":"Нема таймерів",
  "LangQuestion":"Ви впевнені?",
  "LangUpgrade":"Встановити нове оновлення?",
