Большое обновление много нового.

--- a/dev_data/lang/lang.en.json
+++ b/dev_data/lang/lang.en.json
@@ -34,6 +34,7 @@
  "LangQuestion":"Are you sure?",
  "LangUpgrade":"Install new version?",
  "LangDonate":"Donate",
+ "LangSoon":"<label class=\"label label-danger\">Soon...</label>",
 
  "_comment": "---page.htm?setup---",
  "LangDevice":"Device Name",
@@ -49,7 +50,7 @@
  "LangGMT2":"Auto search and save GMT zone",
  "LangAP":"Access point",
  "LangDdns1":"Dynamic DNS",
- "LangDdns2":"At 15, 30, 45, 00 minutes every hour the device switched to the link. You can use <a target=\"_blank\" href=\"http://freemyip.com\">freemyip.com</a> or <a target=\"_blank\" href=\"http://dyndns.dk\"> dyndns.dk </a> and this make a domain on a dynamic IP. That will allow comfortable use <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>",
+ "LangDdns2":"At 15, 30, 45, 00 minutes every hour the device switched to the link. You can use <a target=\"_blank\" href=\"http://freemyip.com\">freemyip.com</a> or <a target=\"_blank\" href=\"http://dyndns.dk\"> dyndns.dk </a> and this make a domain on a dynamic IP. That will allow comfortable use <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>. <a target=\"_blank\" href=\"https://www.youtube.com/watch?v=v2VO3d31JRE&list=PL6NJTNxbvy-IPTDQk8XjTV41oRrFafrRi\">Video option DDNS and ifttt.com</a>",
  "LangTime1":"Device time",
  "LangTime2":"Synchronize time",
  "LangReset1":"Reload this device",
@@ -57,8 +58,9 @@
  "LangReset3":"Are you sure you want to reboot the device?",
  "LangRedirect":"Auto redirection through",
  "LangHiddenWifi":"Connect to hidden WiFi network",
+ "LangType":"Type device",
 
- "_comment": "---TIMER.HTM---",
+ "_comment": "---page.htm?timer---",
  "LangTime3":"Set time",
  "LangTime4":"Time",
  "LangList":"List",
@@ -76,8 +78,7 @@
  "LangSun":"Sunday",
  "LangAll":"Always",
  "LangSwitch.":"Switch",
- "LangMoreDevice":"Show other devices",
- "LangTime6":"Attention. By adjusting the time write \"0\" before a single digit. Min (Work time) are optional.",
+ "LangTime6":"Attention. By adjusting the time write \"0\" before a single digit. \"Work time\" is optional.",
 
  "_comment": "---page.htm?relay---",
  "LangIfttt1":"With service <a target=\"_blank\" href=\"https://ifttt.com/myrecipes/personal\"> ifttt.com </a> device can be switched in many scenarios, such as: new message on facebook, twitter, <a onclick=\"toggle('ifttt-help');return false\" href=\"#\">more...</a><span id=\"ifttt-help\" class=\"hidden\"> setting in Google calendar, mail, etc. More information how to do this, you can see in the video <a target=\"_blank\" href=\"https://youtu.be/3PVQYLQ-XDQ\">here</a>.<br>Local link: <span id=\"ddns-url1\"></span><br>Global link: <span id=\"ddns-url2\"></span></span>",
@@ -97,14 +98,12 @@
  "LangColor3":"Blue",
  "LangSpeed":"Speed",
  "LengBrightness":"Brightness",
- "LangIfttt3":"More options can be found at <a target=\"_blank\" href=\"https://ifttt.com/create/if-date_and_time?sid=1\">ifttt.com</a>.",
 
- "_comment": "---JALOUSIE.HTM---",
- "LangTime10":"Closing time:",
- "LangTime11":"Opening time:",
- "LangOn1Off1":"Close / Open",
- "LangOff1":"Closen",
- "LangOn1":"Open",
+ "_comment": "---page.htm?jalousie---",
+ "LangOpenClose":"Close / Open",
+ "LangClose":"Closen",
+ "LangOpen":"Open",
+ "LangTurn":"Turn of blinds",
 
  "_comment": "---page.htm?chart---",
  "LangTemperature":"Temperature",
