--- a/dev_data/lang/lang.lv.json
+++ b/dev_data/lang/lang.lv.json
@@ -34,6 +34,7 @@
  "LangQuestion":"Vai tu esi pārliecināts?",
  "LangUpgrade":"Installet jaunu versiju?",
  "LangDonate":"Atbalstīt projektu",
+ "LangSoon":"<label class=\"label label-danger\">Driz...</label>",
 
  "_comment": "---page.htm?setup---",
  "LangDevice":"Ierīces nosaukums",
@@ -49,7 +50,7 @@
  "LangGMT2":"Automātiska laika joslas izvēle un saglabāšana",
  "LangAP":"Piekļuves punkts",
  "LangDdns1":"Dinamisks DNS",
- "LangDdns2":"Katras stundas 15., 30., 45., 00 minūtē iekārta iet uz linku. Jūs varat izmantot <a target=\"_blank\" href=\"http://freemyip.com\">freemyip.com</a> vai <a target=\"_blank\" href=\"http://dyndns.dk\">dyndns.dk</a> un tādējādi izveidot sev domēnu ar dinamisko IP adresi. Tas ļaus ērti izmantot <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>",
+ "LangDdns2":"Katras stundas 15., 30., 45., 00 minūtē iekārta iet uz linku. Jūs varat izmantot <a target=\"_blank\" href=\"http://freemyip.com\">freemyip.com</a> vai <a target=\"_blank\" href=\"http://dyndns.dk\">dyndns.dk</a> un tādējādi izveidot sev domēnu ar dinamisko IP adresi. Tas ļaus ērti izmantot <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>. <a target=\"_blank\" href=\"https://www.youtube.com/watch?v=v2VO3d31JRE&list=PL6NJTNxbvy-IPTDQk8XjTV41oRrFafrRi\">Paskaties video</a>",
  "LangTime1":"Plkst. uz ierīces tagad",
  "LangTime2":"Sinhronizēt laiku",
  "LangReset1":"Pārlādēt šo ierīci",
@@ -57,8 +58,9 @@
  "LangReset3":"Vai jūs tiešām vēlaties restartēt ierīci?",
  "LangRedirect":"Auto novirzīšana caur",
  "LangHiddenWifi":"Savienojumu ar slēpto WiFi tīklam",
+ "LangType":"Ierīce tips",
 
- "_comment": "---TIMER.HTM---",
+ "_comment": "---page.htm?timer---",
  "LangTime3":"Uzstadinal laiks",
  "LangTime4":"Laiks",
  "LangList":"Saraksts",
@@ -76,7 +78,6 @@
  "LangSun":"Svetdiena",
  "LangAll":"Visas",
  "LangSwitch.":"Pārs.",
- "LangMoreDevice":"Rādīt citas ierīces",
  "LangTime6":"Svarigi. Norādot laiku, rakstīt \"0\" pirms vienciparu skaitļa.",
 
  "_comment": "---page.htm?relay---",
@@ -97,15 +98,12 @@
  "LangColor3":"Zils",
  "LangSpeed":"Atrums",
  "LengBrightness":"Spilgtums",
- "LangIfttt3":"Citas iespējas var atrast <a target=\"_blank\" href=\"https://ifttt.com/create/if-date_and_time?sid=1\">ifttt.com</a>.",
 
- "_comment": "---JALOUSIE.HTM---",
- "LangTime3":"Laika iestatījumi",
- "LangTime10":"Aizvēršanas laiks:",
- "LangTime11":"Atvēršanas laiks:",
- "LangOn1Off1":"Aizvert / Atvert",
- "LangOff1":"Aizvert",
- "LangOn1":"Atvert",
+ "_comment": "---page.htm?jalousie---",
+ "LangOpenClose":"Aizvert / Atvert",
+ "LangClose":"Aizvert",
+ "LangOpen":"Atvert",
+ "LangTurn":"Motora apgriezienu skaits",
 
  "_comment": "---page.htm?chart---",
  "LangTemperature":"Temperatūra",
