--- a/dev_data/lang/lang.ru.json
+++ b/dev_data/lang/lang.ru.json
@@ -34,6 +34,7 @@
  "LangQuestion":"Вы уверены?",
  "LangUpgrade":"Установить новое обновление?",
  "LangDonate":"Поддержи проект",
+ "LangSoon":"<label class=\"label label-danger\">Скоро...</label>",
 
  "_comment": "---page.htm?setup---",
  "LangDevice":"Имя устройства",
@@ -49,7 +50,7 @@
  "LangGMT2":"Автоопределение и сохранение зоны",
  "LangAP":"Точка доступа",
  "LangDdns1":"Динамический DNS",
- "LangDdns2":"В 15, 30, 45, 00 минут каждого часа устройство переходить по ссылке. Вы можете воспользоваться <a target=\"_blank\" href=\"http://freemyip.com\">freemyip.com</a> или <a target=\"_blank\" href=\"http://dyndns.dk\">dyndns.dk</a> и таким образом сделать себе домен на динамическом IP. Что позволит комфортно пользоваться <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>",
+ "LangDdns2":"В 15, 30, 45, 00 минут каждого часа устройство переходить по ссылке. Вы можете воспользоваться <a target=\"_blank\" href=\"http://freemyip.com\">freemyip.com</a> или <a target=\"_blank\" href=\"http://dyndns.dk\">dyndns.dk</a> и таким образом сделать себе домен на динамическом IP. Что позволит комфортно пользоваться <a target=\"_blank\" href=\"https://ifttt.com\">ifttt.com</a>. <a target=\"_blank\" href=\"https://www.youtube.com/watch?v=v2VO3d31JRE&list=PL6NJTNxbvy-IPTDQk8XjTV41oRrFafrRi\">Посмотрите видео о настройки DDNS и ifttt.com</a>",
  "LangTime1":"На устройстве сейчас",
  "LangTime2":"Синхронизировать время",
  "LangReset1":"Перезагрузить устройство",
@@ -57,8 +58,9 @@
  "LangReset3":"Вы действительно хотите перезагрузить устройство?",
  "LangRedirect":"Авто перенаправление через",
  "LangHiddenWifi":"Подключится к скрытой WiFi сети",
+ "LangType":"Тип устройства",
 
- "_comment": "---TIMER.HTM---",
+ "_comment": "---page.htm?timer---",
  "LangTime3":"Установить время",
  "LangTime4":"Время",
  "LangList":"Список",
@@ -76,8 +78,7 @@
  "LangSun":"Воскресенье",
  "LangAll":"Всегда",
  "LangSwitch.":"Перекл.",
- "LangMoreDevice":"Показать остальные устройства",
- "LangTime6":"Настраивая время перед одиночными цифрами пишите 0. Ячейку Мин(Продолж. работы) заполнять не обязательно.",
+ "LangTime6":"Настраивая время перед одиночными цифрами пишите 0. Ячейку \"Продолж. работы\" заполнять не обязательно.",
 
  "_comment": "---page.htm?relay---",
  "LangIfttt1":"С помощью сервиса <a target=\"_blank\" href=\"https://ifttt.com/myrecipes/personal\">ifttt.com</a> Устройство может включатся по многим сценариев, например: новое сообщение в facebook, twitter, <a onclick=\"toggle('ifttt-help');return false\" href=\"#\">подробнее...</a><span id=\"ifttt-help\" class=\"hidden\"> задания в Google calendar, почта и многое другое. Подробней о том как это сделать вы можете посмотреть видео <a target=\"_blank\" href=\"https://youtu.be/3PVQYLQ-XDQ\">здесь</a>.<br>Локальная ссылка: <span id=\"ddns-url1\"></span><br>Глобальная ссылка: <span id=\"ddns-url2\"></span></span>",
@@ -97,14 +98,12 @@
  "LangColor3":"Синий",
  "LangSpeed":"Скорость",
  "LengBrightness":"Яркость",
- "LangIfttt3":"Больше настроек вы можете получить на <a target=\"_blank\" href=\"https://ifttt.com/create/if-date_and_time?sid=1\">ifttt.com</a>.",
 
- "_comment": "---JALOUSIE.HTM---",
- "LangTime10":"Время закрытия:",
- "LangTime11":"Время открытия:",
- "LangOnOff1":"Закрыть / Открыть",
- "LangOff1":"Закрыть",
- "LangOn1":"Открыть",
+ "_comment": "---page.htm?jalousie---",
+ "LangOpenClose":"Закрыть / Открыть",
+ "LangClose":"Закрыть",
+ "LangOpen":"Открыть",
+ "LangTurn":"Обороты мотора",
 
  "_comment": "---page.htm?chart---",
  "LangTemperature":"Температура",
